RESOLVED FIXED 91591
Cannot select the inner element of AuthorShadowDOM for an img element
https://bugs.webkit.org/show_bug.cgi?id=91591
Summary Cannot select the inner element of AuthorShadowDOM for an img element
Shinya Kawanaka
Reported 2012-07-18 00:01:12 PDT
It seems all the content for an img element is treated like an image... We cannot select the elements added to img element.
Attachments
Patch (5.52 KB, patch)
2012-08-08 00:38 PDT, Shinya Kawanaka
no flags
Shinya Kawanaka
Comment 1 2012-08-08 00:38:40 PDT
WebKit Review Bot
Comment 2 2012-08-13 01:22:40 PDT
Comment on attachment 157141 [details] Patch Clearing flags on attachment: 157141 Committed r125397: <http://trac.webkit.org/changeset/125397>
WebKit Review Bot
Comment 3 2012-08-13 01:22:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.