Cannot select the AuthorShadowDOM inner element of an img element https://bugs.webkit.org/show_bug.cgi?id=91591

Reviewed by Dimitri Glazkov.

Source/WebCore:

Since HTMLImageElement::canStartSelection always returns false, we cannot start selection
from any children (including shadow dom) of an img element. When the img element has a shadow dom,
we should be able to start selection.

Test: fast/dom/shadow/select-image-with-shadow.html

* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::canStartSelection):
(WebCore):
* html/HTMLImageElement.h:
(HTMLImageElement):
* html/shadow/ImageInnerElement.h:
(WebCore::ImageInnerElement::canStartSelection): Since ImageInnerElement is really an image,
this should return always false to obey the exising behavior.
(ImageInnerElement):

LayoutTests:

* fast/dom/shadow/select-image-with-shadow-expected.txt: Added.
* fast/dom/shadow/select-image-with-shadow.html: Added.


Canonical link: https://commits.webkit.org/111672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125397 268f45cc-cd09-0410-ab3c-d52691b4dbfc